2009-07-23  Marcus Meissner  <marcus@jet.franken.de>

	* shell.c,action.c,main.c:
	  --capture-tethered ported to be just --wait-event + downloading

          New --wait-event-and-download commandline option.

	  --capture-tethered and --wait-event-and-download take optional
	  counts or seconds, default is infinite waiting.

	  Added 3 new shell commands:
	  wait-event=x			(just like wait-event cmdline option, default 1)
	  capture-tethered=x		(just like capture-tethered cmdline option, default 1)
	  wait-event-and-download=x	(just like wait-event-and-download cmdline option, default 1)

2009-06-21  Marcus Meissner  <marcus@jet.franken.de>

	* main.c,action.c,shell.c: 
	  Added seperate --set-config-index and --set-config-value functions
	  for menu choice settings.

	* main.c: Save files with current umask, not 0600.

2009-04-10  Marcus Meissner  <marcus@jet.franken.de>

	* main.c: --wait-event=x now can wait for "x" events,
	  or 1 second timeouts. (so longest wait time will be "x" seconds).
	* main.c: --trigger-capture to trigger the camera capture
	* main.c: --capture-image, --capture-image-and-download:
	  added a second implementation using "trigger capture" and "wait event".

	* actions.c: ctrl-c can abort tethered capture now
	* main.c: --capture made more quiet on --quiet

2008-12-04  T E Dixon  <https://sourceforge.net/users/dixonte/>

	* main.c: Allow graceful exiting interval capture with SIGUSR2.

2008-08-28  Marcus Meissner  <marcus@jet.franken.de>

	* gphoto2/main.c: Allow to specify a camera by port.

	  For instance:
		gphoto2 --port usb:005,003 --capture-image


2008-05-24  Marcus Meissner  <marcus@jet.franken.de>

	* gphoto2/{main.c,main.h,shell.c}:

	  --capture-image split into:

		--capture-image: just capture the image
		--capture-image-and-download:
			capture the image and download it.

2007-10-28  Dan Fandrich  <dan@coneharvesters.com>
	    Marcus Meissner  <marcus@jet.franken.de>
	* tests/**: Start of a testsuite from Dan.
